--- a/index.html
+++ b/index.html
@@ -3,12 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    
     <title>Document</title>
-
     <script src="index.js"></script>
+
+    <style>
+        .spacer{ 
+         margin-top: 20px;   
+        }
+    </style>
 
 </head>
 <body>
-    <h1>Hello </h1>
+     <!-- <h1>Hello </h1> -->
+
+    <!-- <button class="btn btn-primary" onclick="show()">CLick</button>  -->
+
+        <div class="text-center" style="margin-top: 20px;">
+            <span class="display-4">
+                Registeration Form
+            </span>
+        </div>
+
+        <hr />
+    <div class="container">
+        <form action="success.html">
+
+            <div class="row">
+                <div class="col-6">Name</div>
+                <div class="col-6"> <input onblur="customblur()" name="name" onfocus="show()" class="form-control" type="text">  </div>
+            </div>
+            <div class="row spacer">
+                <div class="col-6">Email ID</div>
+                <div class="col-6"> <input onblur="customblur()" name="eid" onfocus="show()" class="form-control" type="email">  </div>
+            </div>
+            <div class="row spacer">
+                <div class="col-6">Mobile NUmber</div>
+                <div class="col-6"> <input onblur="customblur()" name="mnum" onfocus="show()" class="form-control" type="number">  </div>
+            </div>
+            <div class="row spacer">
+                <div class="col-6">Address</div>
+                <div class="col-6"> <textarea rows="5" name="add" class="form-control" ></textarea>  </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <input type="submit" class="btn btn-primary" value="Submit" >
+                </div>
+            </div>
+
+
+        </form>
+    </div>
+
+
 </body>
 </html>
