--- a/index.html
+++ b/index.html
@@ -44,9 +44,18 @@
                 <div class="col-6"> <input onblur="customblur()" name="eid" onfocus="show()" class="form-control" type="email">  </div>
             </div>
             <div class="row spacer">
-                <div class="col-6">Mobile NUmber</div>
+                <div class="col-6">Mobile Number</div>
                 <div class="col-6"> <input onblur="customblur()" name="mnum" onfocus="show()" class="form-control" type="number">  </div>
             </div>
+            <div class="row spacer">
+                <div class="col-6">Password</div>
+                <div class="col-6"> <input onblur="customblur()" name="mnum" onfocus="show()" class="form-control" type="password">  </div>
+            </div>
+            <div class="row spacer">
+                <div class="col-6">Confirm Password</div>
+                <div class="col-6"> <input onblur="customblur()" name="mnum" onfocus="show()" class="form-control" type="password">  </div>
+            </div>
+            
             <div class="row spacer">
                 <div class="col-6">Address</div>
                 <div class="col-6"> <textarea rows="5" name="add" class="form-control" ></textarea>  </div>
@@ -54,11 +63,10 @@
 
             <div class="row">
                 <div class="col-12">
+                    <button>Submit</button>
                     <input type="submit" class="btn btn-primary" value="Submit" >
                 </div>
             </div>
-
-
         </form>
     </div>
 
