--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                 <div class="col-6">Mobile Number</div>
                 <div class="col-6"> <input onblur="customblur()" name="mnum" onfocus="show()" class="form-control" type="number">  </div>
             </div>
+
+            <div class="row spacer">
+                <div class="col-6">PAN Number</div>
+                <div class="col-6"> <input onblur="customblur()" name="mnum" onfocus="show()" class="form-control" type="text">  </div>
+            </div>
+
             <div class="row spacer">
                 <div class="col-6">Password</div>
                 <div class="col-6"> <input onblur="customblur()" name="mnum" onfocus="show()" class="form-control" type="password">  </div>
